# Corealpha-FT-HF

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  app.py  compose.yaml  corealpha_adapter_app.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-ui.yml  ci.yml  docker-publish.yml  e2e-adapter.yml  lint.yml  release-please.yml  ui-deploy-vercel.yml  unpack-ui.yml  unpack.yml
core/: config.py
corealpha_adapter/: __init__.py  __main__.py  app.py  requirements.txt  schemas.py
corealpha_adapter/core/: __init__.py  config.py
corealpha_adapter/models/: __init__.py  types.py
corealpha_adapter/providers/: __init__.py  base.py  fingpt.py  openai_p.py  stub.py
corealpha_adapter/routers/: __init__.py  agent.py  health.py  sentiment.py  summarize.py  vote.py
corealpha_adapter/services/: __init__.py  fingpt_service.py  llm_router.py
corealpha_adapter/tests/: __init__.py  test_api_contract.py
corealpha_ui_v1/corealpha_ui_v1/: README.md  index.html
docker/: start.sh  start_app.py
docs/: plays-like-providers.md
frontend/: README.md  package.json
frontend/src/: index.js
models/: types.py
routers/: __init__.py  agent.py  health.py  sentiment.py  summarize.py  vote.py
server/: __init__.py
services/: fingpt_service.py
tests/: conftest.py  test_hardening.py  test_observability.py  test_providers_smoke.py  test_security_limits.py  test_smoke.py
(+34 files in other folders)
